# soothe-community

./: .gitignore  CONTRIBUTING.md  MANIFEST.md  Makefile  README.md  pyproject.toml
docs/: RFC-601-community-agents.md
src/soothe_community/: README.md  __init__.py  _paths.py
src/soothe_community/.plugin_template/: PLUGIN_TEMPLATE.md  README.md.template  __init__.py.template  events.py.template  implementation.py.template  models.py.template  state.py.template
src/soothe_community/browser/: __init__.py  config_model.py  display_summary.py  events.py  implementation.py
src/soothe_community/claude/: __init__.py  display_summary.py  events.py  implementation.py  session_bridge.py
src/soothe_community/paperscout/: __init__.py  email.py  events.py  gap_scanner.py  implementation.py  models.py  nodes.py  reranker.py  state.py
src/soothe_community/sample_echo/: __init__.py  implementation.py
src/soothe_community/skillify/: __init__.py  events.py  indexer.py  models.py  retriever.py  warehouse.py
src/soothe_community/weaver/: __init__.py  analyzer.py  composer.py  events.py  generator.py  models.py  registry.py  reuse.py
tests/: conftest.py
tests/integration/: test_plugin_loading.py
tests/test_paperscout/: conftest.py  test_email.py  test_events.py  test_models.py  test_plugin.py  test_reranker.py
tests/test_sample_echo/: test_plugin.py
tests/unit/subagents/: test_browser_claude_subagents.py  test_claude_cwd_resolution.py  test_claude_session_alignment.py  test_claude_tool_input_preview.py
tests/unit/subagents/browser/: test_browser_display_summary.py  test_browser_runtime.py  test_browser_subagent_integration.py
tests/unit/subagents/claude/: test_claude_display_summary.py
