[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soothe-community"
version = "0.1.0"
description = "Community plugins for Soothe agent orchestration framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"

[project.urls]
Homepage = "https://github.com/OpenSoothe/soothe-community"
Repository = "https://github.com/OpenSoothe/soothe-community"
Issues = "https://github.com/OpenSoothe/soothe-community/issues"

keywords = ["soothe", "plugins", "agents", "ai", "llm", "arxiv", "paperscout"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "soothe-sdk>=0.2.0,<1.0.0",
    "langgraph>=0.2.0",
    "arxiv>=2.0.0",
    "sentence-transformers>=2.2.0",
    "pyzotero>=1.5.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.20.0",
    "tiktoken>=0.5.0",
    "feedparser>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov",
    "ruff>=0.12.0",
]

[project.entry-points."soothe.plugins"]
paperscout = "soothe_community.paperscout:PaperScoutPlugin"
skillify = "soothe_community.skillify:SkillifyPlugin"
weaver = "soothe_community.weaver:WeaverPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/soothe_community"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
